# ThavalonWeb

./: .gitignore  Dockerfile.local  LICENSE  Makefile  README.md  db.sqlite3  docker-compose.webapp.yaml  docker-compose.yaml  dump.rdb  env_vars  gitignore  manage.py  package-lock.json  requirements.txt  testing.py
.devcontainer/: devcontainer.json  docker-compose.yml
.ebextensions/: channels.config  django.config
.ebextensions/supervisord/: supervisord.conf
.elasticbeanstalk/: config.yml
.github/workflows/: build.yml  main.yml  rust.yml
ThavalonWeb/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
docs/: rules.md
game/: game.py  game_constants.py  gamemanager.py  player.py  playermanager.py  role.py  roles.py
game/roles/: agravaine.py  evil.py  iseult.py  lancelot.py  lover.py  maelegant.py  maeve.py  merlin.py  mordred.py  morgana.py  nimue.py  oberon.py  percival.py  tristan.py
k8s/: docker-compose.prod.yaml
k8s/api/: Dockerfile
k8s/webapp/: Dockerfile  default.conf
thavalon/: apps.py  consumers.py  lobbymanager.py  routing.py  urls.py  views.py
thavalon-db/: Cargo.toml  Dockerfile.local
thavalon-db/src/: main.rs
thavalon-db/src/database/: mod.rs
thavalon-db/src/database/accounts/: account_errors.rs  mod.rs
thavalon-db/src/database/db_admin/: mod.rs
thavalon-db/src/rest/: account_handlers.rs  mod.rs  paths.rs
thavalon-db/src/validation/: mod.rs
thavalon-server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  thavalon_cert.crt  thavalon_key.key
thavalon-server/src/: main.rs  utils.rs
thavalon-server/src/connections/: account_handlers.rs  errors.rs  game_handlers.rs  mod.rs  paths.rs  rest_handlers.rs  validation.rs  websockets.rs
thavalon-server/src/database/: mod.rs
thavalon-server/src/database/accounts/: account_errors.rs  email_verification.rs  mod.rs
thavalon-server/src/database/games/: db_game.rs  mod.rs
thavalon-server/src/game/: builder.rs  engine.rs  interactions.rs  messages.rs  mod.rs  model.rs  role.rs  runner.rs  snapshot.rs  state.rs  state2.rs
thavalon-server/src/game/state/: assassination.rs  on_mission.rs  proposing.rs  role_state.rs  voting.rs
thavalon-server/src/lobbies/: errors.rs  mod.rs
thavalon-server/src/lobby/: client.rs  lobby_impl.rs  mod.rs
thavalon-server/src/notifications/: account.rs  errors.rs  mod.rs
thavalon-web/: package.json  tsconfig.json
thavalon-webapp/: .dockerignore  .eslintrc  Dockerfile  Dockerfile.local  package-lock.json  package.json  tsconfig.json
(+142 files in other folders)
