[package]
name = "thavalon-db"
version = "0.1.0"
authors = ["Paul <pauladdonizio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
warp = "0.2.5"
log = "0.4"
thiserror = "1.0.20"
jsonwebtoken = "7.2"
scrypt = "0.4"
serde_json = "1.0.57"

[dependencies.fern]
version = "0.6"
features = ["colored"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["rt-threaded", "macros"]