[package]
name = "thavalon-server"
version = "0.1.0"
authors = ["theadd336 <pauladdonizio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.7.3"
lazy_static = "1.4.0"
thiserror = "1.0.2"

[dependencies.tokio]
version = "0.2"
features = [
    "macros",
    "rt-threaded"
]