[package]
name = "thavalon-server"
version = "0.1.0"
authors = ["theadd336 <pauladdonizio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
maplit = "1.0.2"
rand = "0.7.3"
lazy_static = "1.4.0"
thiserror = "1.0.20"
futures = "0.3"
itertools = "0.9"
warp = "0.2"

[dependencies.fern]
version = "0.6"
features = ["colored"]

[dependencies.tokio]
version = "0.2"
features = [
    "macros",
    "rt-threaded",
    "stream",
    "sync"
]