[package]
name = "thavalon-server"
version = "0.3.1"
authors = ["theadd336 <pauladdonizio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = "0.4"
maplit = "1.0.2"
lazy_static = "1.4.0"
thiserror = "1.0.20"
futures = "0.3"
itertools = "0.9"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
scrypt = "0.4.1"
mongodb = "1.1.1"
chrono = "0.4.19"
jsonwebtoken = "7.2.0"
rand = "0.7.3"
mailgun-rs = "0.1.3"

[dependencies.warp]
version = "0.2.5"
features = ["tls"]

[dependencies.fern]
version = "0.6"
features = ["colored"]

[dependencies.tokio]
version = "0.2"
features = [
    "macros",
    "rt-threaded",
    "stream",
    "sync"
]

[dependencies.uuid]
version = "0.8.1"
features = [
    "v4",
]